--- a/.settings/console.ini
+++ b/.settings/console.ini
@@ -38,6 +38,7 @@ engine.max_fps="0"
 connect=""
 disconnect=""
 sensitivity="1.0"
+volume.game="1.0"
 
 [settings]
 
@@ -79,6 +80,7 @@ engine.max_fps="0"
 connect=""
 disconnect=""
 sensitivity="1.0"
+volume.game="1.0"
 
 [___settings___]
 
