--- a/.settings/console.ini
+++ b/.settings/console.ini
@@ -49,16 +49,16 @@ console.theme.set=""
 console.theme.apply=""
 console.theme.save="res://addons/simusdev/console/themes/console_default_theme.tres"
 clear=""
-console.saved.messages="[]"
+console.saved.messages="[\"window.vsync 0\", \"engine.max_fps 144\", \"fps.show 11\", \"fps.show \"]"
 ui.console.zoom="1.0"
-ui.console.position="(355.0, 0.0)"
+ui.console.position="(-490.0, 179.0)"
 debug.interface="false"
-fps.show="false"
+fps.show="11"
 cmd.list=""
 events.debug="true"
 localization="null"
 window.mode="0"
-window.vsync="1"
+window.vsync="0"
 volume.Master="1.0"
 actions.bind="{  }"
 inputmap.bind="action cmd []"
@@ -76,7 +76,7 @@ quit=""
 engine.quit=""
 engine.version=""
 engine.info=""
-engine.max_fps="0"
+engine.max_fps="144"
 connect=""
 disconnect=""
 sensitivity="1.0"
