--- a/.settings/console.ini
+++ b/.settings/console.ini
@@ -39,6 +39,7 @@ connect=""
 disconnect=""
 sensitivity="1.0"
 volume.game="1.0"
+level.spawn=""
 
 [settings]
 
@@ -49,9 +50,9 @@ console.theme.set=""
 console.theme.apply=""
 console.theme.save="res://addons/simusdev/console/themes/console_default_theme.tres"
 clear=""
-console.saved.messages="[]"
+console.saved.messages="[\"level.spawn sound:ak47_fire\", \"level.spawn sound:ak47_fire\", \"level.spawn sound:ak47_fire\", \"level.spawn sound:ak47_fire\", \"level.spawn sound:ak47_fire\", \"level.spawn sound:ak47_fire\", \"level.spawn sound:ak47_fire\", \"level.spawn sound:ak47_fire\", \"level.spawn sound:ak47_fire\", \"level.spawn sound:ak47_fire\", \"level.spawn sound:ak47\"]"
 ui.console.zoom="1.0"
-ui.console.position="(355.0, 0.0)"
+ui.console.position="(281.0, -18.0)"
 debug.interface="false"
 fps.show="false"
 cmd.list=""
@@ -81,6 +82,7 @@ connect=""
 disconnect=""
 sensitivity="1.0"
 volume.game="1.0"
+level.spawn="sound:ak47_fire"
 
 [___settings___]
 
